fix the spacing between the sections and content.

--- a/src/components/Contact/_Contact.scss
+++ b/src/components/Contact/_Contact.scss
@@ -10,6 +10,7 @@
     .intro{
       margin-bottom: 3px;
       font-weight: bold;
+      margin-top: 14px;
     }
     .direction {
       margin-bottom: 10px;
