--- a/src/components/Portfolio/_Portfolio.scss
+++ b/src/components/Portfolio/_Portfolio.scss
@@ -1,10 +1,12 @@
 .Portfolio {
   width: 100%;
+  margin-bottom: 30px;
   .content {
     width: 100%;
     height: 100%;
     display: grid;
     .sub-header {
+      margin-top: 12px;
       justify-self: center;
       width: 80%;
       height: 100%;
@@ -14,6 +16,7 @@
       align-items: center;
       .separator{
         grid-column: 1 / -1;
+        margin-bottom: 14px;
       }
       .filters-container{
         width: 100%;
