--- a/src/components/Skills/_Skills.scss
+++ b/src/components/Skills/_Skills.scss
@@ -2,6 +2,7 @@
   width: 100%;
   display: flex;
   flex-direction: column;
+  margin-bottom: 30px;
   .container {
     align-self: center;
     width: 90%;
